commiting initial template

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ Have fun creating your portfolio on this template!!! -->
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <!-- Fill content with the URL of this portfolio you'll host -->
-    <meta property="og:url" content="https://devfolio.js.org/" />
+    <meta property="og:url" content="https://yoonlee.github.io" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
-    <meta property="og:title" content="[Your name here] | Developer" />
+    <meta property="og:title" content="Yoon Lee | overtheexit" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
-    <meta property="og:description" content="Made using DevFolio Template" />
+    <meta property="og:description" content="Yoon Lee's personal Website showcasing his experiences" />
     <!-- Add a thumbnail image in assets folder and fill the content attr with URL to that thumbnail 
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
@@ -135,31 +135,33 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+              Welcome to my corner of the web! 
+              I'm Yoon Lee, currently pursuing a Master of Computer Science 
+              at UIUC.
             </p>
-            <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+            <p>
+              With hands-on experience in technology consulting and data analysis 
+              from internships at EY Blockchain and EY Seoul, 
+              I've honed my skills in blockchain analysis, data visualization,
+              and market research. My work includes developing data-driven insights,
+              optimizing administrative processes, and conducting high-impact research.
             </p>
-            <span class="about-wrapper__cta">
-              <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
-            </span>
+            <p>
+              My technical toolkit includes R, MySQL, Python, Pandas, C++, HTML, CSS, and more.
+              Beyond academia and professional life, 
+              I enjoy making digital arts, reading books, and caring about personal health!
+            </p>
           </div>
         </div>
       </div>
     </section>
     <!-- /END About Section -->
 
-    <!--Projects Section-->
-    <section id="projects">
+    <!--Experiences Section-->
+    <section id="experiences">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+          <h2 class="section-title dark-blue-text">Experiences</h2>
 
           <!-- Each .row is a project -->
           <article class="row">
@@ -176,7 +178,7 @@ Have fun creating your portfolio on this template!!! -->
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  class="cta-btn cta-btn--hero cta-btn--experiences"
                   >See Live</a
                 >
                 <a href="#" target="_blank" class="cta-btn text-color-main"
@@ -216,7 +218,7 @@ Have fun creating your portfolio on this template!!! -->
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  class="cta-btn cta-btn--hero cta-btn--experiences"
                   >See Live</a
                 >
                 <a href="#" target="_blank" class="cta-btn text-color-main"
@@ -256,7 +258,7 @@ Have fun creating your portfolio on this template!!! -->
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  class="cta-btn cta-btn--hero cta-btn--experiences"
                   >See Live</a
                 >
                 <a href="#" target="_blank" class="cta-btn text-color-main"
@@ -283,7 +285,7 @@ Have fun creating your portfolio on this template!!! -->
         </div>
       </div>
     </section>
-    <!-- End Projects Section -->
+    <!-- End experiences Section -->
 
     <!-- Contact Section -->
     <section id="contact">
