filled Experiences Section with pictures

--- a/index.html
+++ b/index.html
@@ -157,41 +157,38 @@ Have fun creating your portfolio on this template!!! -->
     </section>
     <!-- /END About Section -->
 
-    <!--Experiences Section-->
-    <section id="experiences">
+    <!--Projects Section-->
+    <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Experiences</h2>
+          <h2 class="section-title dark-blue-text">experiences</h2>
 
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">EY Blockchain</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Experiences
               </p>
-              <div class="project-wrapper__text-btns">
+              <!-- <div class="project-wrapper__text-btns">
                 <a
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--experiences"
+                  class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
                 <a href="#" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
-              </div>
+              </div> -->
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://blockchain.ey.com/" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/EYChicago.jpeg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -206,32 +203,32 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">EY한영</h3>
               <p class="project-wrapper__text-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
                 necessitatibus impedit repellendus vero sed ipsa eos beatae ab
                 sint saepe nostrum! Enim, perferendis.
               </p>
-              <div class="project-wrapper__text-btns">
+              <!-- <div class="project-wrapper__text-btns">
                 <a
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--experiences"
+                  class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
                 <a href="#" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
-              </div>
+              </div> -->
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.ey.com/ko_kr/digital" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/EYKorea.jpeg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -246,7 +243,7 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">CNI Lab @  KAIST</h3>
               <p class="project-wrapper__text-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
@@ -258,20 +255,20 @@ Have fun creating your portfolio on this template!!! -->
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--experiences"
-                  >See Live</a
+                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  >Research</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <!-- <a href="#" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
-                >
+                > -->
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://ibrain.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/KAIST.jpeg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -285,7 +282,7 @@ Have fun creating your portfolio on this template!!! -->
         </div>
       </div>
     </section>
-    <!-- End experiences Section -->
+    <!-- End Projects Section -->
 
     <!-- Contact Section -->
     <section id="contact">
