--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!-- HELLO
--
-DevFolio is a minimal, clean, lightweight and fully responsive template for Devlopers!
-Created by Anil Seervi.
--
-GitHub repo: https://github.com/AnilSeervi/DevFolio
-README: https://github.com/AnilSeervi/DevFolio/blob/master/README.md
--
-Have fun creating your portfolio on this template!!! -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,7 +17,7 @@ Have fun creating your portfolio on this template!!! -->
     <meta name="description" content="Yoon Lee | Overtheexit" />
 
     <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
-    <link rel="icon" type="image/png" href="./assets/devfolio-logo.png" />
+    <link rel="icon" type="image/png" href="./assets/OpenseaArt.avif" />
 
     <!-- Add your primary-theme color for the value of content -->
     <meta name="theme-color" content="#F2D2BD" />
@@ -110,7 +100,7 @@ Have fun creating your portfolio on this template!!! -->
           I'm a data scientist who is passionate about blockchain!
         </h1>
         <p class="hero-cta">
-          <a class="cta-btn cta-btn--hero" href="#contact">Get in touch</a>
+          <a class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1e5IyIeUQeBXkDKHxbmKYN6_vSFsUm-J1/view?usp=sharing">My Resume</a>
         </p>
       </section>
       <a href="#about" class="scroll-down-link" aria-label="scroll-down">
@@ -157,11 +147,64 @@ Have fun creating your portfolio on this template!!! -->
     </section>
     <!-- /END About Section -->
 
+<!-- Experience Section -->
+<section id="experience">
+  <div class="container">
+    <h2 class="section-title">Where I’ve Worked</h2>
+    <div id="experience-container">
+      <div id="experience-list">
+        <ul>
+          <li class="experience-item active" data-experience="0">EY Blockchain</li>
+          <li class="experience-item" data-experience="1">EY Seoul</li>
+          <li class="experience-item" data-experience="2">CNI Lab @ KAIST</li>
+        </ul>
+      </div>
+      <div id="experience-details">
+        <!-- EY Blockchain Experience -->
+        <div class="experience-detail active" id="experience-0">
+          <h3>Technology Consultant @ EY Blockchain</h3>
+          <p>Jan 2024 - May 2024</p>
+          <ul>
+            <li>Analyzed and optimized blockchain solutions for financial services.</li>
+            <li>Developed data-driven insights and visualizations for blockchain performance metrics.</li>
+            <li>Collaborated with cross-functional teams to integrate blockchain technology into existing systems.</li>
+            <li>Contributed to the development of blockchain-based smart contracts and decentralized applications.</li>
+          </ul>
+        </div>
+        <!-- EY Seoul Experience -->
+        <div class="experience-detail" id="experience-1">
+          <h3>Technology Consulting Intern @ EY Seoul</h3>
+          <p>May 2023 - Aug 2023</p>
+          <ul>
+            <li>Conducted market research and analysis for emerging blockchain technologies.</li>
+            <li>Assisted in the development and implementation of blockchain-based solutions for clients.</li>
+            <li>Prepared reports and presentations for client meetings and internal stakeholders.</li>
+            <li>Supported the team in identifying and mitigating risks in blockchain projects.</li>
+          </ul>
+        </div>
+        <!-- CNI Lab @ KAIST Experience -->
+        <div class="experience-detail" id="experience-2">
+          <h3>Research Assistant @ CNI Lab, KAIST</h3>
+          <p>Jun 2022 - Dec 2022</p>
+          <ul>
+            <li>Researched and developed algorithms for network optimization and blockchain integration.</li>
+            <li>Collaborated on a project to enhance the security and efficiency of blockchain networks.</li>
+            <li>Published research findings in peer-reviewed journals and presented at academic conferences.</li>
+            <li>Assisted in supervising undergraduate research projects related to blockchain technology.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- /END Experience Section -->
+
+
     <!--Projects Section-->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">experiences</h2>
+          <h2 class="section-title dark-blue-text">Things that I've made</h2>
 
           <!-- Each .row is a project -->
           <article class="row">
@@ -325,14 +368,14 @@ Have fun creating your portfolio on this template!!! -->
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">Please Feel Free to Reach Out!</p>
-          <a href="#" class="cta-btn cta-btn--resume">Email Me!</a>
+          <a href="mailto:yoonseo.lee1212@gmail.com" class="cta-btn cta-btn--resume">Email Me!</a>
         </div>
       </div>
     </section>
     <!-- END Contact Section -->
 
 <!-- Modal Structure -->
-<div id="emailModal" class="modal">
+<!-- <div id="emailModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
     <form>
@@ -348,7 +391,7 @@ Have fun creating your portfolio on this template!!! -->
       <button type="submit" class="cta-btn--submit">Send</button>
     </form>
   </div>
-</div>
+</div> -->
   <!-- END Contact Modal -->
 
     <!-- Footer Section -->
@@ -412,7 +455,8 @@ Have fun creating your portfolio on this template!!! -->
     </script>
     <script src="./javascript/vanilla-tilt.min.js"></script>
     <script type="text/javascript" src="./javascript/valtilt.js"></script>
-    <script src="/javascript/modal.js"></script>
+    <!-- <script src="/javascript/modal.js"></script> -->
+    <script src="/javascript/experience.js"></script>
   </body>
   
 </html>
