80% done with "Where I've worked" section.

--- a/index.html
+++ b/index.html
@@ -147,58 +147,57 @@
     </section>
     <!-- /END About Section -->
 
-<!-- Experience Section -->
-<section id="experience">
-  <div class="container">
-    <h2 class="section-title">Where I’ve Worked</h2>
-    <div id="experience-container">
-      <div id="experience-list">
-        <ul>
-          <li class="experience-item active" data-experience="0">EY Blockchain</li>
-          <li class="experience-item" data-experience="1">EY Seoul</li>
-          <li class="experience-item" data-experience="2">CNI Lab @ KAIST</li>
-        </ul>
+    <!-- Experience Section -->
+    <section id="experience">
+      <div class="container">
+        <h2 class="section-title">Where I’ve Worked</h2>
+        <div id="experience-container">
+          <div id="experience-list">
+            <ul>
+              <li class="experience-item active" data-experience="0">EY Blockchain</li>
+              <li class="experience-item" data-experience="1">EY Seoul</li>
+              <li class="experience-item" data-experience="2">CNI Lab @ KAIST</li>
+            </ul>
+          </div>
+          <div id="experience-details">
+            <!-- EY Blockchain Experience -->
+            <div class="experience-detail active" id="experience-0">
+              <h3>Technology Consultanting intern @ EY Blockchain</h3>
+              <p>Jun 2023 - Aug 2023</p>
+              <ul>
+                <li>Analyzed and optimized blockchain solutions for financial services.</li>
+                <li>Developed data-driven insights and visualizations for blockchain performance metrics.</li>
+                <li>Collaborated with cross-functional teams to integrate blockchain technology into existing systems.</li>
+                <li>Contributed to the development of blockchain-based smart contracts and decentralized applications.</li>
+              </ul>
+            </div>
+            <!-- EY Seoul Experience -->
+            <div class="experience-detail" id="experience-1">
+              <h3>Digital Technology Consulting Intern @ EY Seoul</h3>
+              <p>Jun 2022 - Aug 2022</p>
+              <ul>
+                <li>Conducted market research and analysis for emerging blockchain technologies.</li>
+                <li>Assisted in the development and implementation of blockchain-based solutions for clients.</li>
+                <li>Prepared reports and presentations for client meetings and internal stakeholders.</li>
+                <li>Supported the team in identifying and mitigating risks in blockchain projects.</li>
+              </ul>
+            </div>
+            <!-- CNI Lab @ KAIST Experience -->
+            <div class="experience-detail" id="experience-2">
+              <h3>Research Assistant @ CNI Lab, KAIST</h3>
+              <p>Oct 2019 - Nov 2019</p>
+              <ul>
+                <li>Researched and developed algorithms for network optimization and blockchain integration.</li>
+                <li>Collaborated on a project to enhance the security and efficiency of blockchain networks.</li>
+                <li>Published research findings in peer-reviewed journals and presented at academic conferences.</li>
+                <li>Assisted in supervising undergraduate research projects related to blockchain technology.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-      <div id="experience-details">
-        <!-- EY Blockchain Experience -->
-        <div class="experience-detail active" id="experience-0">
-          <h3>Technology Consultant @ EY Blockchain</h3>
-          <p>Jan 2024 - May 2024</p>
-          <ul>
-            <li>Analyzed and optimized blockchain solutions for financial services.</li>
-            <li>Developed data-driven insights and visualizations for blockchain performance metrics.</li>
-            <li>Collaborated with cross-functional teams to integrate blockchain technology into existing systems.</li>
-            <li>Contributed to the development of blockchain-based smart contracts and decentralized applications.</li>
-          </ul>
-        </div>
-        <!-- EY Seoul Experience -->
-        <div class="experience-detail" id="experience-1">
-          <h3>Technology Consulting Intern @ EY Seoul</h3>
-          <p>May 2023 - Aug 2023</p>
-          <ul>
-            <li>Conducted market research and analysis for emerging blockchain technologies.</li>
-            <li>Assisted in the development and implementation of blockchain-based solutions for clients.</li>
-            <li>Prepared reports and presentations for client meetings and internal stakeholders.</li>
-            <li>Supported the team in identifying and mitigating risks in blockchain projects.</li>
-          </ul>
-        </div>
-        <!-- CNI Lab @ KAIST Experience -->
-        <div class="experience-detail" id="experience-2">
-          <h3>Research Assistant @ CNI Lab, KAIST</h3>
-          <p>Jun 2022 - Dec 2022</p>
-          <ul>
-            <li>Researched and developed algorithms for network optimization and blockchain integration.</li>
-            <li>Collaborated on a project to enhance the security and efficiency of blockchain networks.</li>
-            <li>Published research findings in peer-reviewed journals and presented at academic conferences.</li>
-            <li>Assisted in supervising undergraduate research projects related to blockchain technology.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /END Experience Section -->
-
+    </section>
+    <!-- /END Experience Section -->
 
     <!--Projects Section-->
     <section id="projects">
@@ -209,49 +208,12 @@
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">EY Blockchain</h3>
+              <h3 class="project-wrapper__text-title">Data Scientist Salary Insight</h3>
               <p class="project-wrapper__text-info">
-                Experiences
-              </p>
-              <!-- <div class="project-wrapper__text-btns">
-                <a
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
-                  >See Live</a
-                >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
-                  >Source Code</a
-                >
-              </div> -->
-            </div>
-
-            <div class="project-wrapper__image">
-              <a href="https://blockchain.ey.com/" target="_blank" rel="noopener noreferrer">
-                <div class="thumbnail rounded">
-                  <img
-                    src="./assets/EYBlockchainLogo.jpeg"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="767"
-                  />
-                </div>
-              </a>
-            </div>
-          </article>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <article class="row">
-            <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">EY한영</h3>
-              <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Wrote <b>R script</b> and deployed it with Shinny App. 
+                <b>Tidyverse</b> was heavily used to wrangle and visualize the salary data obtained from Kaggle.
+                The app generates bar chart that depicts how much each technical skills are required by the given condition of data science jobs
+                like salary range or Industry Sector. 
               </p>
               <!-- <div class="project-wrapper__text-btns">
                 <a
@@ -286,21 +248,20 @@
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">CNI Lab @  KAIST</h3>
+              <h3 class="project-wrapper__text-title">Game Sales Data visualization</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Created a data visualization using Tableau that shows game sales by genre and time, 
+                top 10 game name by sales, and top 10 gaming platforms by sales.
+                Utilized area chart, bar chart, and bubble plot.
               </p>
               <div class="project-wrapper__text-btns">
-                <a
+                <!-- <a
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >Research</a
-                >
+                > -->
                 <!-- <a href="#" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 > -->
@@ -308,10 +269,10 @@
             </div>
 
             <div class="project-wrapper__image">
-              <a href="https://ibrain.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">
+              <a href="https://public.tableau.com/views/GamesSalesDashboard_16860650207060/DashboardProject-CS416?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/KAIST.jpeg"
+                    src="./assets/Tableau.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -327,6 +288,8 @@
               <h3 class="project-wrapper__text-title">Digital Art</h3>
               <p class="project-wrapper__text-info">
                 Mainly Collage by pictures that were taken by me and modified by me!
+                I used Photoleap and Canva on my iphone to make this collage.
+                Every pieces that I wanted to publish is on-chain, so feel free to visit my <b href="https://opensea.io/overtheexit">Opensea</b> page!
               </p>
               <!-- <div class="project-wrapper__text-btns">
                 <a
@@ -346,7 +309,7 @@
               <a href="https://opensea.io/overtheexit" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/OpenSeaArt2.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -374,25 +337,25 @@
     </section>
     <!-- END Contact Section -->
 
-<!-- Modal Structure -->
-<!-- <div id="emailModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <form>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" placeholder="Your name.." required>
+    <!-- Modal Structure -->
+    <!-- <div id="emailModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <form>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Your name.." required>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Your email.." required>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Your email.." required>
 
-      <label for="message">Message</label>
-      <textarea id="message" name="message" placeholder="Write something.." required></textarea>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" placeholder="Write something.." required></textarea>
 
-      <button type="submit" class="cta-btn--submit">Send</button>
-    </form>
-  </div>
-</div> -->
-  <!-- END Contact Modal -->
+          <button type="submit" class="cta-btn--submit">Send</button>
+        </form>
+      </div>
+    </div> -->
+    <!-- END Contact Modal -->
 
     <!-- Footer Section -->
     <footer class="footer">
